--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "yarn": "^1.22.19"
   }
