--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE=mongodb+srv://tothanhdat:Tothanhdat123@cluster0.dxjtsoc.mongodb.net/blogtodat?retryWrites=true&w=majority
+CLIENT_ID='f3f50640a5fff47'
