--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.18",
     "yarn": "^1.22.19"
   }
