--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE=mongodb+srv://tothanhdat:Tothanhdat123@cluster0.dxjtsoc.mongodb.net/blogtodat?retryWrites=true&w=majority
+DATABASE_TEST=mongodb://localhost/blogtodat
 CLIENT_ID='f3f50640a5fff47'
 CLIENT_EMAIL_ID=634519078303-4kemdcblp0orcl35hd7cco6r9gb0afa2.apps.googleusercontent.com
 CLIENT_EMAIL_SECRET=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
