add feature new word

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REFRESH_TOKEN=1//04SULXUFUlwJACgYIARAAGAQSNwF-L9Ir2eM3WNbYa9E1yzZMVoZSk4VR3CAiWt
 MAIL_PASSWORD=mehtdrzhvdycakix
 
 TOKEN_TELEGRAM='5920362563:AAErtHRja5JWUfqWACpWZwqg1QOacJ-Hslg'
+OPENAI_API_KEY='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'
