--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.18",
+    "openai": "^3.2.1",
     "yarn": "^1.22.19"
   }
 }
