--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -18,9 +18,12 @@
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.18",
     "openai": "^3.2.1",
     "replicate": "^0.12.1",
+    "uuid": "^9.0.1",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
